<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="365dp"
        android:layout_height="189dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/esquinas_redondeadas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvInicio">


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="311dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/esquinas_redondeadas"
            android:drawableStart="@drawable/ic_correo"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/Correo"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etContraseña"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/esquinas_redondeadas"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/Contraseña"
            android:drawableStart="@drawable/ic_contrasena"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txvInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Inicio"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="#080C90"
        android:textColor="#FFFFFF"
        android:text="@string/BtnEntrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="#080C90"
        android:textColor="#FFFFFF"
        android:text="@string/BtnInicioS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toEndOf="@+id/btnEntrar"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>