<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutCita"
        android:layout_width="117dp"
        android:layout_height="107dp"
        android:layout_marginTop="268dp"
        android:background="@drawable/esquinas_redondeadas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgCita"
            android:layout_width="71dp"
            android:layout_height="79dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/agendar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutDetalles"
        android:layout_width="117dp"
        android:layout_height="107dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/esquinas_redondeadas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toEndOf="@+id/constraintLayoutCita"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="67dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/detalles" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutServicios"
        android:layout_width="103dp"
        android:layout_height="114dp"
        android:layout_marginTop="508dp"
        android:background="@drawable/esquinas_redondeadas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgServicios"
            android:layout_width="74dp"
            android:layout_height="98dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/servicios" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnServicios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#080C90"
        android:text="@string/BtnServicios"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutServicios" />

    <Button
        android:id="@+id/btnCita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#080C90"
        android:text="@string/BtnCita"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutCita" />

    <Button
        android:id="@+id/btnLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#080C90"
        android:text="@string/BtnListaCita"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toEndOf="@+id/btnCita"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutDetalles" />


</androidx.constraintlayout.widget.ConstraintLayout>